// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportSearchOptions Selectors selectReportSearchOptions prepares reportOptions for URL sharing 1`] = `
Object {
  "filters": Array [
    101,
    102,
  ],
  "from": "2018-03-23T21:10:08Z",
  "precision": "hour",
  "range": undefined,
  "timezone": "America/New_York",
  "to": "2018-03-23T21:11:08Z",
}
`;

exports[`ReportSearchOptions Selectors selectSummaryChartSearchOptions prepares summary chart reportOptions for URL sharing 1`] = `
Object {
  "filters": Array [
    101,
    102,
  ],
  "from": "2018-03-23T21:10:08Z",
  "metrics": Array [
    "count_bounce",
    "count_accepted",
    "metric_key",
  ],
  "precision": "hour",
  "range": undefined,
  "timezone": "America/New_York",
  "to": "2018-03-23T21:11:08Z",
}
`;
